ANDROID: file manager webui (wip)